--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,13 +1,8 @@
 name: Build LaTex Document
 
 on:
-  push:
-    branches:
-      - master
-  pull_request:
-    branches:
-      - master
-  workflow_dispatch:
+  push: {}
+  pull_request: {}
 
 jobs:
   build:
